added div to code link

--- a/index.HTML
+++ b/index.HTML
@@ -61,9 +61,11 @@
         </div>
       </div>
     </div>
-    <a href="https://github.com/Nardelys15c/Project-Weather.git"
-      >open source code </a
-    >by Nardelys Caraballo
+    <div class="pages-link">
+      <a href="https://github.com/Nardelys15c/Project-Weather.git"
+        >open source code </a
+      >by Nardelys Caraballo
+    </div>
     <script src="src/script.js"></script>
   </body>
 </html>
