attempting to fix css issue

--- a/index.HTML
+++ b/index.HTML
@@ -11,7 +11,7 @@
     />
     <title>WireframeW2</title>
 
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
@@ -61,11 +61,12 @@
         </div>
       </div>
     </div>
-    <div class="pages-link">
+    <medium>
       <a href="https://github.com/Nardelys15c/Project-Weather.git"
         >open source code </a
       >by Nardelys Caraballo
-    </div>
+    </medium>
+
     <script src="src/script.js"></script>
   </body>
 </html>
